# IDI_pension_funds_scraping

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Munopa_Scraper.ipynb  Munopa_Scraper2.ipynb  PKA.ipynb  README.md  ap2.ipynb  bpfbouw.ipynb  bsfun.ipynb  danicapension2.ipynb  detailhandel.ipynb  main.py  pyproject.toml  rail+ov.ipynb  sampension.ipynb  stichting_pensioenfonds_ABP.ipynb  vervoer.ipynb
archive/wip_scrapers/: Munopa_Scraper.ipynb  Munopa_Scraper2.ipynb  amfscrapeincompletemunopafinished.ipynb  ap2.ipynb  ap7.ipynb  bpfbouw.ipynb  bsfun.ipynb  danicapension2.ipynb  detailhandel.ipynb  rail+ov.ipynb  sampension.ipynb  stichting_pensioenfonds_ABP.ipynb  vervoer.ipynb
archive/wip_scrapers/ZorgWelzijn/: Aandelen_2024Q4 (1).json  Credit_Risk_Sharing_2024Q4_V2.json  Externe_vermogensbeheerders_2024Q4.json  importzwjsons.ipynb
archive/wip_scrapers/py files/: pme_async_test.py  pme_sync_test.py
archive/wip_scrapers/py_files/: ap2.py  danicaDONE.py  detailhandel.py  kpa_noauto.py  sampensionretrieveDONE.py  vervoer.py
data/ap2/2026-02-19/: ap2_foreign.tsv  ap2_swedish.tsv
data/ap3/2026-02-27/: ap3_private.tsv  ap3_swedish.tsv
data/ap3/2026-04-01/: ap3_swedish.tsv
data/bpfbouw/2026-02-26/: bpfbouw.tsv
data/pme/2026-03-31/: pme.tsv  (+1 more)
py files/: detailhandel.py  vervoer.py
scripts/: README.md  amf.py  ap2.py  ap3.py  ap4.py  bpfbouw.py  data_cleanup.py  functions.py  kpa.py  lacera.py  nbim.py  pensiondanmark.py  pme.py  pmt.py  vervoer.py
scripts/supplement/: dutchcountries.csv
src/pipeline/: __init__.py  cli.py  registry.py
wip_scrapers/: amfscrapeincompletemunopafinished.ipynb  ap7.ipynb  bpfbouw.ipynb  rail+ov.ipynb  sampension.ipynb  stichting_pensioenfonds_ABP.ipynb  vervoer.ipynb
wip_scrapers/ZorgWelzijn/: Obligaties_2024Q4.json  Private_equity_2024Q4.json
wip_scrapers/py files/: sampensionretrieveDONE.py  vervoer.py
(+91 files in other folders)
