[project]
name = "idi-pensions-funds-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "playwright>=1.57.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]


[tool.ruff]
lint.extend-select=[]
lint.ignore=[]
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
    ".pdf",
    ".csv",
    ".tsv"
]
